--- a/src/views/resetpassword.hbs
+++ b/src/views/resetpassword.hbs
@@ -18,24 +18,33 @@
         <p class="mb-4 opacity-40">Enter your new password.</p>
 
         <!-- Form -->
-        <form id="resetPasswordForm" class="flex flex-col gap-2" method="POST" action="/reset" onsubmit="validateresetPasswordForm(event)">
+        <form id="reset-form" class="flex flex-col gap-2" method="POST" action="/reset" onsubmit="validateResetPasswordForm(event)">
 
-            <div class="relative">
-                <label for="password" class="sr-only form-lable">Password</label>
-                <input type="password" id="password"
-                    class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl pr-10" name="password"
-                    placeholder="New password" onchange="validatePasswords()">
-                <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
-                    id="togglePassword" onclick="togglePasswordVisibility(this)"></i>
+            <div>
+                <div class="relative">
+                    <label for="password" class="sr-only form-lable">Password</label>
+                    <input type="password" id="password"
+                        class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl pr-10" name="password"
+                        placeholder="New password" onchange="validatePasswords()">
+                    <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
+                        id="togglePassword" onclick="togglePasswordVisibility(this)"></i>
+                </div>
+                <small id="password-error" class="hidden block text-left text-red-600"
+                    style="text-indent: 1rem;"></small>
             </div>
 
-            <div class="relative">
-                <label for="confirmPassword" class="sr-only form-lable">Confirm new password</label>
-                <input type="password" id="confirmPassword"
-                    class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl pr-10" name="confirmPassword"
-                    placeholder="Confirm new password" required oninput="validatePasswords()">
-                <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
-                    id="toggleConfirmPassword" onclick="togglePasswordVisibility(this)"></i>
+            <div>
+                <div class="relative">
+                    <label for="confirmPassword" class="sr-only form-lable">Confirm new password</label>
+                    <input type="password" id="confirmPassword"
+                        class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl pr-10" name="confirmPassword"
+                        placeholder="Confirm new password" oninput="validatePasswords()">
+                    <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
+                        id="toggleConfirmPassword" onclick="togglePasswordVisibility(this)"></i>
+                </div>
+                <small id="confirmPassword-error" class="hidden block text-left text-red-600"
+                    style="text-indent: 1rem;"></small>
+
             </div>
 
             {{#if resetMessage}}
@@ -93,12 +102,6 @@
         });
     });
 
-    function process(e) {
-        e.preventDefault();
-        window.location.href = '/';
-        return false;
-    }
-
     const regexPassword = /^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*\W)(?!.* ).{8,16}$/;
 
     function togglePasswordVisibility(icon) {
@@ -128,12 +131,13 @@
         let confirmPassword = document.getElementById('confirmPassword');
 
         if (password.value !== confirmPassword.value) {
-            confirmPassword.setCustomValidity('Passwords do not match!');
-            confirmPassword.reportValidity();
+            document.getElementById('confirmPassword-error').classList.remove('hidden');
+            document.getElementById('confirmPassword-error').textContent = 'Passwords do not match!';
         } else {
-            confirmPassword.setCustomValidity('');
+            document.getElementById('confirmPassword-error').classList.add('hidden');
         }
     }
+
 
     async function validateResetPasswordForm(event) {
     event.preventDefault();
@@ -168,7 +172,7 @@
 
     // Kiểm tra confirmPassword
     if (!confirmPassword) {
-        confirmPasswordError.textContent = 'Please confirm your password';
+        confirmPasswordError.textContent = 'Confirm password is required';
         confirmPasswordError.classList.remove('hidden');
         isValid = false;
     } else if (confirmPassword !== password) {
@@ -181,7 +185,7 @@
     if (!isValid) return;
 
     // Tiến hành gửi dữ liệu bằng Fetch API hoặc submit form
-    document.getElementById('reset-password-form').submit();
+    document.getElementById('reset-form').submit();
 }
 
 
