--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -9,8 +9,8 @@
             <!-- Email input -->
             <div>
                 <label for="email" class="sr-only">Email</label>
-                <input type="email" id="email" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
-                    name="email" placeholder="Email" required>
+                <input type="text" id="email" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
+                    name="email" placeholder="Email">
                 <small id="email-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
             </div>
 
@@ -18,19 +18,21 @@
             <div>
                 <label for="username" class="sr-only">Username</label>
                 <input type="text" id="username" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
-                    name="username" placeholder="Username" required>
+                    name="username" placeholder="Username">
                 <small id="username-error" class="hidden block text-left text-red-600"
                     style="text-indent: 1rem;"></small>
             </div>
 
             <!-- Password Input -->
-            <div class="relative">
-                <label for="password" class="sr-only">Password</label>
-                <input type="password" id="password"
-                    class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="password"
-                    placeholder="Password" required>
-                <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
-                    id="togglePassword" onclick="togglePasswordVisibility(this)"></i>
+            <div>
+                <div  class="relative">
+                    <label for="password" class="sr-only">Password</label>
+                    <input type="password" id="password"
+                        class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="password"
+                        placeholder="Password">
+                    <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
+                        id="togglePassword" onclick="togglePasswordVisibility(this)"></i>
+                </div>
                 <small id="password-error" class="hidden block text-left text-red-600"
                     style="text-indent: 1rem;"></small>
             </div>
@@ -108,13 +110,13 @@
         }
     }
 
-    async function validateSignupForm(event) {
+    function validateSignupForm(event) {
         event.preventDefault();
 
         // Lấy giá trị từ các input
         const username = document.getElementById('username').value.trim();
         const email = document.getElementById('email').value.trim();
-        const password = document.getElementById('password').value.trim();=
+        const password = document.getElementById('password').value.trim();
         // Lấy các phần tử thông báo lỗi
         const usernameError = document.getElementById('username-error');
         const emailError = document.getElementById('email-error');
@@ -128,17 +130,6 @@
         passwordError.textContent = '';
         // Kiểm tra trạng thái hợp lệ
         let isValid = true;
-        // Kiểm tra username (chỉ chứa ký tự viết thường và dấu gạch dưới)
-        if (!username) {
-            usernameError.textContent = 'Username is required';
-            usernameError.classList.remove('hidden');
-            isValid = false;
-        } else if (!regexUsername.test(username)) {
-            usernameError.textContent = 'Username must contain only lowercase letters and underscores';
-            usernameError.classList.remove('hidden');
-            isValid = false;
-        }
-
         // Kiểm tra email
         if (!email) {
             emailError.textContent = 'Email is required';
@@ -147,6 +138,16 @@
         } else if (!regexEmail.test(email)) {
             emailError.textContent = 'Please enter a valid email address';
             emailError.classList.remove('hidden');
+            isValid = false;
+        }
+        // Kiểm tra username (chỉ chứa ký tự viết thường và dấu gạch dưới)
+        if (!username) {
+            usernameError.textContent = 'Username is required';
+            usernameError.classList.remove('hidden');
+            isValid = false;
+        } else if (!regexUsername.test(username)) {
+            usernameError.textContent = 'Username must contain only lowercase letters and underscores';
+            usernameError.classList.remove('hidden');
             isValid = false;
         }
 
