PV-Minh: update verify email when signup

--- a/src/views/forgotpassword.hbs
+++ b/src/views/forgotpassword.hbs
@@ -6,7 +6,7 @@
         <!-- Heading -->
         <h1 class="mb-2 text-xl font-bold">Forgot password</h1>
         {{#if done}}
-        <p class="mb-4 opacity-40">An email has been sent to your email. Please follow the instructtion in that eamil to reset your password. </p>
+        <p class="mb-4 opacity-40">An email has been sent to your email. Please follow the instructtion in that email to reset your password. </p>
         {{else}}
         <p class="mb-4 opacity-40">Enter your email address and we'll send you a link to reset your password.
         </p>
