--- a/src/views/signup2.hbs
+++ b/src/views/signup2.hbs
@@ -5,19 +5,38 @@
         
         <!-- Heading -->
         <h1 class="mb-2 text-xl font-bold">Sign up</h1>
+        {{#if done}}
+        <p class="mb-4 opacity-40">Signup successd. You can now
+            <a class="!opacity-100 bold text-blue-600 underline hover:text-blue-800 visited:text-purple-600"
+                href="/login">login</a>
+            using your new account!
+        </p>
+        {{else}}
+        {{#if expired}}
+        <p class="mb-4 opacity-40">Your link is expired!</p>
+        {{else}}
 
         <p class="mb-4 opacity-40">Create your display name.</p>
 
         <!-- Form -->
-        <form id="createDisplaynameForm" class="flex flex-col gap-2" method="POST" action="#" onsubmit="process(event)">
+        <form id="signup2-form" class="flex flex-col gap-2" method="POST" action="/signup2">
             
             <div>
                 <label for="displayname" class="sr-only form-lable">Display name</label>
                 <input type="text" id="displayname" 
                 class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
-                name="displayname" placeholder="Display name" required 
+                name="displayname" placeholder="Display name"
                 >
             </div>
+            
+            <input type="hidden" name="email" value="{{email}}">
+            <input type="hidden" name="token" value="{{token}}">
+            
+            {{#if message}}
+            <div class="flex justify-start">
+                <small class="text-left text-red-600" style="text-indent: 1rem;">{{{message}}}</small>
+            </div>
+            {{/if}}
 
             <!-- Submit Button -->
             <button id="updateBtn" type="submit"
@@ -43,6 +62,8 @@
                 onclick="window.location.href='/login'">
                 Log in
         </button>
+        {{/if}}
+        {{/if}}
     </div>
 </div>
 
@@ -67,9 +88,4 @@
         });
     });
 
-    function process(e){
-        e.preventDefault();
-        window.location.href = '/';
-        return false;
-    }
 </script>
