PV Minh: update login: keep incorret input

--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -13,6 +13,7 @@
                 <label for="emailOrUsername" class="sr-only">Username or email</label>
                 <input type="text" id="emailOrUsername"
                     class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl" name="emailOrUsername"
+                    value="{{emailOrUsername}}"
                     placeholder="Email or username">
                 <small id="email-error" class="hidden block text-left text-red-600" style="text-indent: 1rem;"></small>
             </div>
@@ -21,7 +22,8 @@
                 <div  class="relative">
                     <label for="password" class="sr-only">Password</label>
                     <input type="password" id="password" class="form-control bg-[#F5F5F5] w-full p-4 outline-none rounded-xl"
-                        name="password" placeholder="Password">
+                        name="password" value="{{password}}"
+                        placeholder="Password">
                         <i class="absolute transform -translate-y-1/2 cursor-pointer far fa-eye right-5 top-1/2 opacity-30"
                             id="togglePassword" onclick="togglePasswordVisibility(this)"></i>
                 </div>
