--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,6 +1,6 @@
 <div class="w-full flex flex-col justify-center items-center">
     <!-- Logo -->
-    <a href="./index.html"><i class="fa-brands fa-threads fa-3x"></i></a>
+    <a href="/"><i class="fa-brands fa-threads fa-3x"></i></a>
 
     <!-- Heading -->
     <h1 class="font-bold text-3xl p-4">Log in</h1>
@@ -27,7 +27,7 @@
     </form>
 
     <div class="text-center opacity-40 my-2">
-        <a href="./forgotPassword.html" class="">Forgot password?</a>
+        <a href="/forgotPassword" class="">Forgot password?</a>
     </div>
 
     <!-- Or divider -->
@@ -38,7 +38,7 @@
     </div>
 
     <!-- Login with Google -->
-    <button type="button" id="google-login" onclick="window.location.href='./index.html'"
+    <button type="button" id="google-login" onclick="window.location.href='/'"
         class="flex my-2 justify-center items-center gap-2 p-4 rounded-2xl border border-black w-1/3 min-w-[400px] hover:bg-black hover:text-white">
         <i class="fa-brands fa-google fa-xl pt-[3px]"></i>
         <span>Continue with Google</span>
@@ -47,7 +47,7 @@
 
     <!-- Signup Redirect -->
     <button type="button" class="bg-black text-white font-medium rounded-2xl p-4 w-1/3 min-w-[400px]"
-        onclick="window.location.href='./signup.html'">
+        onclick="window.location.href='/'">
         Sign up
     </button>
 </div>
