adjust profile view

--- a/src/views/other-profile.hbs
+++ b/src/views/other-profile.hbs
@@ -180,12 +180,9 @@
         </div>
 
         <!-- Tabs Container -->
-        <div class="grid grid-cols-2 gap-0 mt-4" id="tabs">
-            <div class="col-span-1 text-center tab active" data-tab="threads">
-                <div class="mb-1">Threads</div>
-            </div>
-            <div class="col-span-1 text-center tab inactive" data-tab="replies">
-                <div class="mb-1">Replies</div>
+        <div class="grid grid-cols-1 gap-0 mt-4" id="tabs">
+            <div class="col-span-1 text-center tab active opacity-30" data-tab="threads">
+                <div class="mb-1"></div>
             </div>
         </div>
 
@@ -239,13 +236,6 @@
                     No threads yet.
                 </div>
                 {{/if}}
-            </div>
-        </div>
-
-        <!-- Replies Content -->
-        <div id="replies-content" class="content-section hidden">
-            <div class="flex items-center justify-center text-[#6d6d6d] h-[calc(100vh-350px)]">
-                No replies yet.
             </div>
         </div>
     </div>
