--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -581,12 +581,9 @@
         </div>
 
         <!-- Tabs Container -->
-        <div class="grid grid-cols-2 gap-0 mt-4" id="tabs">
-            <div class="col-span-1 text-center tab active" data-tab="threads">
-                <div class="mb-1">Threads</div>
-            </div>
-            <div class="col-span-1 text-center tab inactive" data-tab="replies">
-                <div class="mb-1">Replies</div>
+        <div class="grid grid-cols-1 gap-0 mt-4" id="tabs">
+            <div class="col-span-1 text-center tab active opacity-30" data-tab="threads">
+                <div class="mb-1"></div>
             </div>
         </div>
 
@@ -620,7 +617,7 @@
                         {{#if imageUrl}}
                         <div class="mb-3">
                             <img src="{{imageUrl}}" alt="Thread Image"
-                                class="w-3/5 h-full max-h-96 rounded-lg object-cover cursor-pointer">
+                                class="max-w-[85%] h-full max-h-96 rounded-lg object-cover cursor-pointer">
                         </div>
                         {{/if}}
                         <div class="flex items-center space-x-1 text-[#424242] mb-3">
@@ -644,13 +641,6 @@
                     No threads yet.
                 </div>
                 {{/if}}
-            </div>
-        </div>
-
-        <!-- Replies Content -->
-        <div id="replies-content" class="content-section hidden">
-            <div class="flex items-center justify-center text-[#6d6d6d] h-[calc(100vh-350px)]">
-                No replies yet.
             </div>
         </div>
     </div>
@@ -1084,7 +1074,6 @@
 
             if (response.ok && result.success) {
                 const threadElement = document.getElementById(`post-${threadId}`);
-                const repliesContainer = threadElement.querySelector('.replies-container');
 
                 const commentCountElement = threadElement.querySelector('.fa-comment').nextElementSibling;
                 commentCountElement.innerText = parseInt(commentCountElement.innerText) + 1;
