--- a/src/views/post.hbs
+++ b/src/views/post.hbs
@@ -36,7 +36,7 @@
                                 class="w-10 h-auto rounded-full object-cover cursor-pointer mt-4">
                         </div>
                         <div class="flex-1">
-                            <div class="flex items-center mb-0">
+                            <div class="flex items-center mb-0 pt-3">
                                 <div class="font-semibold text-black hover:underline cursor-pointer username-link"
                                     data-user-id="{{author.id}}">
                                     <a href="/@{{author.username}}" class="cursor-pointer">{{author.username}}</a>
@@ -44,10 +44,6 @@
                                 <div class="text-[#999999] text-sm ml-2 font-normal">
                                     {{timeAgo thread.createdAt}}
                                 </div>
-                                <button
-                                    class="text-[#999999] ml-auto cursor-pointer px-3 py-2 rounded-full hover:bg-[#f5f5f5]">
-                                    <i class="fa-solid fa-ellipsis-h"></i>
-                                </button>
                             </div>
                             <h3 class="text-sm font-normal mb-2 text-[#121212] sm:text-base">
                                 {{thread.title}}
